<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/github_avatar_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />
    
    <TextView
        android:id="@+id/github_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/github_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_avatar_detail"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/github_id_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_id_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_name_detail" />

    <TextView
        android:id="@+id/github_followers_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/github_followers_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_id_detail"
        app:layout_constraintEnd_toStartOf="@id/github_following_detail"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/github_following_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/github_following_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_id_detail"
        app:layout_constraintStart_toEndOf="@id/github_followers_detail"
        android:textStyle="bold"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/github_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/github_followers_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/github_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/github_tab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/github_addActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        app:icon="@drawable/baseline_add_24"
        android:text="@string/github_add_actions"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/github_addFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/github_favorite_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/github_addActions"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_favorite_border_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/github_addShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/github_share_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/github_addFavorites"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_share_24" />

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>