<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/github_about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/github_profile_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/user_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/github_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_profile_name"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_profile_avatar" />

    <TextView
        android:id="@+id/github_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_profile_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_profile_name" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_profile_email" />


</androidx.constraintlayout.widget.ConstraintLayout>